--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="profile">
           <img class="myprofpic" src="images/jacob.jpg" alt="Jacob's Picture">
           <h2>Hello.</h2>
-          <p class="top-desc">I am currently taking up BS in Information Technology at the University of Santo Tomas. I am currently studying web development as of the moment. I love watching anime and eating different types of food!</p>
+          <p class="top-desc">I am currently taking up BS in Information Technology at the University of Santo Tomas. I am currently studying web development this summer break. I love watching anime and eating different types of food!</p>
         </div>
         <hr class="dottedhr">
         <div class="skills">
